Implement Redfish v1 API with full DMTF compliance
- Add Redfish v1.11.0 Base Registry compliant error responses
- Implement ComputerSystem.Reset endpoint with proper HTTP status codes
- Add power state conflict detection (409 responses for redundant operations)
- Create reusable error handling functions for Base Registry messages
- Implement proper API versioning structure (/redfish/v1/)
- Add comprehensive Redfish documentation and examples
- Remove build artifacts and update .gitignore

This implementation provides a fully compliant Redfish API v1 endpoint
that follows DMTF specifications and industry best practices.

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,12 @@ __debug_bin*
 # Test binary, built with `go test -c`
 *.test
 
+# Ignore build and console files
+build
+console
+app
+@
+
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
