--- a/config/config.yml
+++ b/config/config.yml
@@ -23,7 +23,7 @@ ea:
   username: ""
   password: ""
 auth:
-  disabled: false
+  disabled: true
   adminUsername: standalone
   adminPassword: G@ppm0ym
   jwtKey: your_secret_jwt_key
