chore: update config formatting

--- a/config/config.yml
+++ b/config/config.yml
@@ -23,7 +23,7 @@ ea:
   username: ""
   password: ""
 auth:
-  disabled: true
+  disabled: false
   adminUsername: standalone
   adminPassword: G@ppm0ym
   jwtKey: your_secret_jwt_key
