--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,9 @@ __debug_bin*
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
+# Ignore build and console files
+app
+
 # Dependency directories (remove the comment below to include it)
 vendor/
 # ...ignore the ui folder
